@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

hide circle
hide methods

left to right direction

class Map {
    name
    size
    scale
}

class City {
    name
    supply
    demand
}

class CityBlock{
}

class Editor {
    username
    password
}

class Position{
    xCoordinate
    yCoordinate
}



Map "1" -- "*" City : contains >
Editor "1" -- "*" Map : creates >
Editor "1" -- "*" City: adds >
City "1" -- "1..*" CityBlock: contains >
City "*" -- "1" Position: has >
CityBlock "*" -- "1" Position: has >


@enduml